{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 15,
  "lineage": "441b2b57-3b5f-8874-dd8e-958271494959",
  "resources": [
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056fd06768e3ac7c5",
            "arn": "arn:aws:ec2:us-east-1:068538545126:instance/i-042aeff46a3ffdbd9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-042aeff46a3ffdbd9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0444e2e8dc6afdcda",
            "private_dns": "ip-172-31-81-56.ec2.internal",
            "private_ip": "172.31.81.56",
            "public_dns": "ec2-52-87-181-40.compute-1.amazonaws.com",
            "public_ip": "52.87.181.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fba217a24fbf49a7",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-5c477c72",
            "tags": {
              "Name": "m1-testInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-ab993bfb"
            ]
          }
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ef6b76b786a6c812",
            "owner_id": "068538545126",
            "tags": {
              "name": "m1-internetGateway"
            },
            "vpc_id": "vpc-034e08cb361bae352"
          },
          "depends_on": [
            "aws_vpc.vpc12"
          ]
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ef6b76b786a6c812",
            "id": "r-rtb-0ad28424b5b4f73b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ad28424b5b4f73b3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_route_table.routetable"
          ]
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ad28424b5b4f73b3",
            "owner_id": "068538545126",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "m1-routetable"
            },
            "vpc_id": "vpc-034e08cb361bae352"
          },
          "depends_on": [
            "aws_vpc.vpc12"
          ]
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038eca519a421b558",
            "route_table_id": "rtb-0ad28424b5b4f73b3",
            "subnet_id": "subnet-0ca75269132cc628e"
          },
          "depends_on": [
            "aws_route_table.routetable",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d2f3d42930074f2",
            "route_table_id": "rtb-0ad28424b5b4f73b3",
            "subnet_id": "subnet-00c560882df62f12e"
          },
          "depends_on": [
            "aws_route_table.routetable",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d82c948a49dd8a8",
            "route_table_id": "rtb-0ad28424b5b4f73b3",
            "subnet_id": "subnet-0b7baba383baa6ba4"
          },
          "depends_on": [
            "aws_route_table.routetable",
            "aws_subnet.subnet3"
          ]
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068538545126:security-group/sg-0ddffdc52c2e02365",
            "description": "Application security group",
            "egress": [],
            "id": "sg-0ddffdc52c2e02365",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3005,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3005
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "application_security_group",
            "name_prefix": null,
            "owner_id": "068538545126",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-034e08cb361bae352"
          },
          "depends_on": [
            "aws_vpc.vpc12"
          ]
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068538545126:subnet/subnet-0ca75269132cc628e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ca75269132cc628e",
            "map_public_ip_on_launch": false,
            "owner_id": "068538545126",
            "tags": {
              "name": "m1-subnet1"
            },
            "vpc_id": "vpc-034e08cb361bae352"
          },
          "depends_on": [
            "aws_vpc.vpc12",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068538545126:subnet/subnet-00c560882df62f12e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00c560882df62f12e",
            "map_public_ip_on_launch": false,
            "owner_id": "068538545126",
            "tags": {
              "name": "m1-subnet2"
            },
            "vpc_id": "vpc-034e08cb361bae352"
          },
          "depends_on": [
            "aws_vpc.vpc12",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068538545126:subnet/subnet-0b7baba383baa6ba4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b7baba383baa6ba4",
            "map_public_ip_on_launch": false,
            "owner_id": "068538545126",
            "tags": {
              "name": "m1-subnet3"
            },
            "vpc_id": "vpc-034e08cb361bae352"
          },
          "depends_on": [
            "aws_vpc.vpc12",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc12",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068538545126:vpc/vpc-034e08cb361bae352",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d059495865d0b00c",
            "default_route_table_id": "rtb-03f22290c22a316a6",
            "default_security_group_id": "sg-02ac677436cbe47b1",
            "dhcp_options_id": "dopt-2b21cb51",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-034e08cb361bae352",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03f22290c22a316a6",
            "owner_id": "068538545126",
            "tags": {
              "name": "vpc-terraformtest"
            }
          }
        }
      ]
    }
  ]
}